--- a/ios/appconcho.xcodeproj/xcshareddata/xcschemes/appconcho.xcscheme
+++ b/ios/appconcho.xcodeproj/xcshareddata/xcschemes/appconcho.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "supperappv2.app"
-               BlueprintName = "supperappv2"
-               ReferencedContainer = "container:supperappv2.xcodeproj">
+               BuildableName = "appconcho.app"
+               BlueprintName = "appconcho"
+               ReferencedContainer = "container:appconcho.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "supperappv2Tests.xctest"
-               BlueprintName = "supperappv2Tests"
-               ReferencedContainer = "container:supperappv2.xcodeproj">
+               BuildableName = "appconchoTests.xctest"
+               BlueprintName = "appconchoTests"
+               ReferencedContainer = "container:appconcho.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "supperappv2.app"
-            BlueprintName = "supperappv2"
-            ReferencedContainer = "container:supperappv2.xcodeproj">
+            BuildableName = "appconcho.app"
+            BlueprintName = "appconcho"
+            ReferencedContainer = "container:appconcho.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "supperappv2.app"
-            BlueprintName = "supperappv2"
-            ReferencedContainer = "container:supperappv2.xcodeproj">
+            BuildableName = "appconcho.app"
+            BlueprintName = "appconcho"
+            ReferencedContainer = "container:appconcho.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
