--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "supperappv2",
+  "name": "appconcho",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,40 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-aria/ssr": "^3.7.1",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-firebase/analytics": "^18.3.0",
+    "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-native-firebase/app": "^18.3.0",
-    "@react-native-firebase/crashlytics": "^18.3.0",
     "@react-native-firebase/messaging": "^18.3.0",
-    "@react-native-firebase/perf": "^18.3.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/core": "^6.4.9",
-    "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query": "^4.33.0",
     "axios": "^1.4.0",
-    "firebase": "^10.2.0",
     "i18next": "^23.4.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-i18next": "^13.1.2",
     "react-native": "0.72.4",
-    "react-native-elements": "^3.4.3",
-    "react-native-image-picker": "^5.6.0",
-    "react-native-paper": "^5.10.1",
-    "react-native-permissions": "^3.8.4",
-    "react-native-push-notification": "^8.1.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "^3.24.0",
+    "react-native-svg": "12.1.1",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0",
-    "react-navigation": "^4.4.4",
-    "react-redux": "^8.1.2",
-    "socket.io-client": "^4.7.2"
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -53,6 +39,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
