--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@tanstack/react-query": "^4.33.0",
     "axios": "^1.4.0",
     "i18next": "^23.4.4",
+    "lodash": "^4.17.21",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-i18next": "^13.1.2",
     "react-native": "0.72.4",
+    "react-native-calendars": "^1.1300.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "12.1.1",
